# InstantOS

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  build.sh  cp2esp.sh  readme.md  run.sh  vboxserial.txt
cmake/: InstantOSMlibc.cmake  InstantOSTcc.cmake
docs/: mlibc.md  syscalls.md  tcc.md  venus.md
include/common/: elf.hpp  krandom.hpp  ports.hpp  string.hpp  tuple.hpp
include/cpu/: cpuid.hpp  percpu.hpp
include/cpu/acpi/: acpi.hpp  aml.hpp  pci.hpp  pci_bus.hpp
include/cpu/apic/: apic.hpp  ioapic.hpp  irqs.hpp  lapic.hpp  pic.hpp
include/cpu/cereal/: cereal.hpp
include/cpu/gdt/: gdt.hpp
include/cpu/idt/: idt.hpp  interrupt.hpp  isr.hpp
include/cpu/process/: exec.hpp  handles.hpp  pe.hpp  process.hpp  scheduler.hpp
include/cpu/syscall/: syscall.hpp  tcp_internal.hpp
include/cpu/tty/: pty.hpp
include/cpu/user/: session.hpp  user.hpp
include/debug/: diag.hpp
include/drivers/hid/: i2c_hid.hpp
include/drivers/net/: e1000.hpp  net_device.hpp  rtl8139.hpp
include/drivers/usb/: ohci.hpp  usb.hpp  xhci.hpp
include/drivers/virtio/: virtio.hpp  virtio_net.hpp
include/fs/ahci/: ahci.hpp  detect.hpp
include/fs/devfs/: devfs.hpp
include/fs/fat32/: fat32.hpp
include/fs/initrd/: initrd.hpp
include/fs/partition/: partition.hpp
include/fs/ramfs/: ramfs.hpp
include/fs/storage/: storage.hpp
include/fs/vfs/: vfs.hpp
include/graphics/: bsod.hpp  buffer.hpp  color.hpp  console.hpp  font.hpp  framebuffer.hpp  gpu.hpp  intel_gen9.hpp  svga.hpp  venus.hpp  virtio_gpu.hpp
include/interrupts/: keyboard.hpp  timer.hpp
include/ipc/: ipc.hpp
include/memory/: heap.hpp  pmm.hpp  vmm.hpp
include/time/: rtc.hpp  time.hpp  tsc_timer.hpp
scripts/: debug-intel-gpu.sh  run-intel-hd530.sh  test-intel-hd530.sh
src/: main.cpp
src/common/: krandom.cpp  ports.cpp  string.cpp
src/cpu/: cpuid.cpp  percpu.cpp
src/cpu/acpi/: acpi.cpp  aml.cpp  pci.cpp  pci_bus.cpp
src/cpu/apic/: apic.cpp
src/cpu/cereal/: cereal.cpp
src/cpu/gdt/: gdt.cpp
src/cpu/idt/: idt.cpp  isr.asm  isr.cpp
src/cpu/memory/: pmm.cpp  vmm.cpp
src/cpu/process/: exec.cpp  handles.cpp  idle.cpp  process.cpp  scheduler.cpp  switch.cpp  usermode.cpp
src/cpu/syscall/: fs.cpp  ipc.cpp  mem.cpp  net.cpp  proc.cpp  signal.cpp  socket.cpp  syscall.cpp  system.cpp  user.cpp
src/cpu/tty/: pty.cpp
src/cpu/user/: session.cpp  user.cpp
src/debug/: diag.cpp
src/drivers/hid/: i2c_hid.cpp
src/drivers/net/: e1000.cpp  net_device.cpp  rtl8139.cpp
src/drivers/usb/: ohci.cpp  xhci.cpp
src/drivers/virtio/: virtio.cpp  virtio_net.cpp
src/fs/ahci/: ahci.cpp  detect.cpp
src/fs/devfs/: devfs.cpp
src/fs/fat32/: fat32.cpp
src/fs/initrd/: initrd.cpp
src/fs/partition/: partition.cpp
src/fs/ramfs/: ramfs.cpp
src/fs/storage/: storage.cpp
src/fs/vfs/: vfs.cpp
src/graphics/: bsode.cpp  buffer.cpp  console.cpp  framebuffer.cpp  gpu.cpp  intel_gen9.cpp  svga.cpp  venus.cpp  virtio_gpu.cpp
src/ipc/: ipc.cpp
src/memory/: heap.cpp
src/time/: rtc.cpp  time.cpp  tsc_timer.cpp
tools/: build-bash.sh  build-coreutils.sh  build-libcurl.sh  build-libjpeg.sh  build-libpng.sh  build-mbedtls.sh  build-mlibc-hello.sh  build-mlibc.sh  build-netsurf-libs.sh  build-netsurf.sh  build-tcc-sysroot.sh  build-tcc.sh  build-zlib.sh  fetch-cacert.sh  fetch-mlibc.sh  fetch-tcc.sh  run-bash-smoke.sh  run-coreutils-smoke.sh  run-mlibc-smoke.sh  run-netsurf-net.sh  run-network-smoke.sh  run-pty-smoke.sh  run-storage-smoke.sh  run-tcc-smoke.sh  run-venus-smoke.sh  run-venus-triangle.sh
tools/bash-smoke/: launcher.c  pty_launcher.c
tools/coreutils-smoke/: launcher.c
tools/mkInitrd/: CMakeLists.txt  main.cpp
tools/mlibc/: instantos-x86_64.ini
tools/netsurf-port/iconv-shim/: iconv.c  iconv.h
tools/netsurf-port/libnsfb/: instant.c
tools/netsurf-port/patches/: libnsfb-header.patch  libnsfb-surface-makefile.patch  netsurf-cabundle.patch  netsurf-config-mmap.patch  netsurf-fetch.patch  netsurf-gui.patch
tools/netsurf-smoke/: launcher.c  net_launcher.c
tools/tcc/: empty-crt.c  hello.c
tools/tcc-smoke/: launcher.c
tools/venus-shader/: build.sh  square_plus_one.comp  square_plus_one.spv  triangle.frag  triangle.vert
